refactor: Use the standardCharsets. UTF_8 constant
Signed-off-by: Carlos Garcia <bcode@protonmail.com>